--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: adamatti
 github_username:  adamatti
 disqus:
-  shortname: adamatti
+  shortname: http-adamatti-github-io-blog
 google_analytics: UA-1039281-11
 minima:
   date_format: "%Y-%m-%-d %H:%M"
