--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ minima:
 asciidoctor:
   attributes:
     - source-highlighter=pygments
+tag_page_layout: tag_page
+tag_page_dir: tag
 
 # Build settings
 markdown: kramdown
