--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: adamatti@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Espaço para compartilhar conhecimento, minhas opiniões, notícias que eu considero relevante.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://adamatti.github.io/blog" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://adamatti.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: adamatti
 github_username:  adamatti
 disqus:
