--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ branches:
   - jekyll
 rvm:
 - 2.2.3
+before_install:
+  - gem install bundler -v 2.1.4
 env:
   global:
     - JEKYLL_ENV: production
