--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
 - 2.6
 before_install:
   - gem install bundler -v 2.1.4
+  - gem install jekyll -v 4.1.0
 env:
   global:
     - JEKYLL_ENV: production
